# stellar-blade-guide

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  railpack.json
server/: README.md  main.py  package-lock.json  package.json  pyproject.toml  railpack.json  requirements-dev.txt  requirements.txt  server.js
server/app/: config.py  main.py
server/config/: connection.js  settings.py
server/controllers/: admin-controller.js  collectible-controller.js  collectibles-controller.js  comment-controller.js  user-controller.js
server/core/: auth.py  cache.py  logging.py  security.py
server/db/: database.py  schema.sql
server/middleware/: bot_filter.py  cors.py  error_handler.py  etag.py  honeypot.py  logging.py  origin_check.py  rate_limit.py  security_headers.py
server/models/: Collectible.js  Comment.js  User.js  __init__.py  collectibles.py  index.js  progress.py  walkthroughs.py
server/routes/: admin.py  auth.py  collectibles.py  comments.py  health.py  levels.py  notifications.py  progress.py  robots.py  search.py  types.py  users.py  walkthroughs.py
server/schemas/: collectibles.py  progress.py  search.py  walkthroughs.py
server/scripts/: dev_workflow.py  generate_sitemap.py  missing_images.py  prod_seed.py  renumber_ids.py  update_category_images.py  workflow.py
server/sql/: schema.sql  seed.sql
server/tests/: conftest.py  test_auth.py  test_bot_filter.py  test_cache_isolation.py  test_collectible_schema.py  test_collectibles_route.py  test_comments.py  test_etag.py  test_image_paths.py  (+14 more)
(+531 files in other folders)
