[project]
name = "stellar-blade-guide"
version = "2.0.0"
description = "Stellar Blade guide with React/TypeScript frontend, Python/FastAPI backend, and PostgreSQL database."
readme = "README.md"
authors = [
    { name = "kyoriku", email = "devkyoriku@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.121.0",
    "uvicorn[standard]==0.38.0",
    "sqlalchemy[asyncio]==2.0.44",
    "asyncpg==0.30.0",
    "redis[hiredis]==5.0.1",
    "slowapi==0.1.9",
    "pydantic[email]==2.12.3",
    "python-dotenv==1.1.1",
    "passlib[argon2]==1.7.4",
    "argon2-cffi==23.1.0",
    "httpx==0.27.0",
    "python-multipart>=0.0.22",
    "cloudinary==1.44.1",
    "Pillow==12.1.1",
    "openai>=1.0.0",
    "resend>=0.5.0",
    "pyjwt>=2.11.0",
]

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
]
